@@ -1,3 +1,12 @@
+Tue Nov 12 19:22:58 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* idvec.h (idvec_set, idvec_set_ids): New functions.
+	* idvec.c (idvec_set, idvec_set_ids): Ditto.
+
+Tue Nov  5 21:16:10 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* idvec.h (idvec_setid): Doc fix.
+
 Thu Oct 24 15:15:27 1996  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* argp-help.c (hol_entry_help: comma): Only print cluster headers for
